--- a/index.html
+++ b/index.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시계 - TimeGom</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Noto+Sans+KR:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">TimeGom</h1>
+            <h1 class="logo"><i class="fas fa-clock"></i> TimeGom</h1>
             <nav>
                 <ul>
-                    <li><a href="index.html" class="active">시계</a></li>
-                    <li><a href="timer.html">타이머</a></li>
-                    <li><a href="stopwatch.html">스톱워치</a></li>
+                    <li><a href="index.html" class="active"><i class="fas fa-clock"></i> 시계</a></li>
+                    <li><a href="timer.html"><i class="fas fa-hourglass-half"></i> 타이머</a></li>
+                    <li><a href="stopwatch.html"><i class="fas fa-stopwatch"></i> 스톱워치</a></li>
                 </ul>
             </nav>
         </div>
@@ -22,7 +26,7 @@
 
     <main class="container">
         <section class="clock-section">
-            <h2>현재 시간</h2>
+            <h2><i class="fas fa-globe"></i> 현재 시간</h2>
             
             <div class="clock-display" id="clock">
                 <div id="time">00:00:00</div>
@@ -31,22 +35,22 @@
             </div>
             
             <div class="world-clocks">
-                <h3>세계 시간</h3>
+                <h3><i class="fas fa-map-marker-alt"></i> 세계 시간</h3>
                 <div class="world-clock-grid">
                     <div class="world-clock-item" id="newyork">
-                        <h4>뉴욕</h4>
+                        <h4><i class="fas fa-building"></i> 뉴욕</h4>
                         <div class="world-time">00:00:00</div>
                     </div>
                     <div class="world-clock-item" id="london">
-                        <h4>런던</h4>
+                        <h4><i class="fas fa-landmark"></i> 런던</h4>
                         <div class="world-time">00:00:00</div>
                     </div>
                     <div class="world-clock-item" id="paris">
-                        <h4>파리</h4>
+                        <h4><i class="fas fa-utensils"></i> 파리</h4>
                         <div class="world-time">00:00:00</div>
                     </div>
                     <div class="world-clock-item" id="tokyo">
-                        <h4>도쿄</h4>
+                        <h4><i class="fas fa-torii-gate"></i> 도쿄</h4>
                         <div class="world-time">00:00:00</div>
                     </div>
                 </div>
@@ -54,8 +58,8 @@
         </section>
 
         <section class="links-section">
-            <a href="timer.html" class="button primary-button">타이머 시작하기</a>
-            <a href="stopwatch.html" class="button secondary-button">스톱워치 시작하기</a>
+            <a href="timer.html" class="button primary-button"><i class="fas fa-hourglass-half"></i> 타이머 시작하기</a>
+            <a href="stopwatch.html" class="button secondary-button"><i class="fas fa-stopwatch"></i> 스톱워치 시작하기</a>
         </section>
     </main>
 
@@ -65,7 +69,7 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="utils.js"></script>
     <script src="clock.js"></script>
 </body>
 </html> 
