--- a/index.html
+++ b/index.html
@@ -46,10 +46,20 @@
                         <div class="marking marking-two"></div>
                         <div class="marking marking-three"></div>
                         <div class="marking marking-four"></div>
+                        <div class="marking marking-five"></div>
+                        <div class="marking marking-six"></div>
                         <div class="clock-number number-12">12</div>
+                        <div class="clock-number number-1">1</div>
+                        <div class="clock-number number-2">2</div>
                         <div class="clock-number number-3">3</div>
+                        <div class="clock-number number-4">4</div>
+                        <div class="clock-number number-5">5</div>
                         <div class="clock-number number-6">6</div>
+                        <div class="clock-number number-7">7</div>
+                        <div class="clock-number number-8">8</div>
                         <div class="clock-number number-9">9</div>
+                        <div class="clock-number number-10">10</div>
+                        <div class="clock-number number-11">11</div>
                         <div class="hour-hand"></div>
                         <div class="minute-hand"></div>
                         <div class="second-hand"></div>
