시계 눈금을 선에서 점으로 변경

--- a/index.html
+++ b/index.html
@@ -43,11 +43,20 @@
                 <div class="analog-clock">
                     <div class="clock-face">
                         <div class="marking marking-one"></div>
-                        <div class="marking marking-two"></div>
-                        <div class="marking marking-three"></div>
-                        <div class="marking marking-four"></div>
-                        <div class="marking marking-five"></div>
-                        <div class="marking marking-six"></div>
+                        <div class="marking-dots">
+                            <div class="dot dot-1"></div>
+                            <div class="dot dot-2"></div>
+                            <div class="dot dot-3"></div>
+                            <div class="dot dot-4"></div>
+                            <div class="dot dot-5"></div>
+                            <div class="dot dot-6"></div>
+                            <div class="dot dot-7"></div>
+                            <div class="dot dot-8"></div>
+                            <div class="dot dot-9"></div>
+                            <div class="dot dot-10"></div>
+                            <div class="dot dot-11"></div>
+                            <div class="dot dot-12"></div>
+                        </div>
                         <div class="clock-number number-12">12</div>
                         <div class="clock-number number-1">1</div>
                         <div class="clock-number number-2">2</div>
