--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시계 - TimeGom</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Noto+Sans+KR:wght@300;400;500;700&family=Roboto+Mono:wght@400;500;600&display=swap" rel="stylesheet">
@@ -42,6 +44,71 @@
             <div class="analog-clock-container" id="analogClock" style="display: none;">
                 <div class="analog-clock">
                     <div class="clock-face">
+                        <div class="clock-ticks">
+                            <!-- 시간 눈금 (12개) -->
+                            <div class="hour-tick" style="transform: rotate(0deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(30deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(60deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(90deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(120deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(150deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(180deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(210deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(240deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(270deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(300deg);"></div>
+                            <div class="hour-tick" style="transform: rotate(330deg);"></div>
+                            
+                            <!-- 분 눈금 (60개 중 48개만 추가 - 시간 눈금과 중복되는 위치 제외) -->
+                            <div class="minute-tick" style="transform: rotate(6deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(12deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(18deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(24deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(36deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(42deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(48deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(54deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(66deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(72deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(78deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(84deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(96deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(102deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(108deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(114deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(126deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(132deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(138deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(144deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(156deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(162deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(168deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(174deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(186deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(192deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(198deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(204deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(216deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(222deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(228deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(234deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(246deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(252deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(258deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(264deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(276deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(282deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(288deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(294deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(306deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(312deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(318deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(324deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(336deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(342deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(348deg);"></div>
+                            <div class="minute-tick" style="transform: rotate(354deg);"></div>
+                        </div>
                         <div class="clock-number number-12">12</div>
                         <div class="clock-number number-1">1</div>
                         <div class="clock-number number-2">2</div>
