Update: 새 페이지 추가 및 기존 파일 수정

--- a/timer.html
+++ b/timer.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>타이머 - TimeGom</title>
+    <meta name="description" content="TimeGom의 편리한 타이머 기능으로 시간을 효율적으로 관리하세요.">
+    <meta name="keywords" content="타이머, 카운트다운, 시간관리, 알람, 시계">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -11,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">TimeGom</h1>
+            <h1 class="logo"><img src="timegom Logo.png" alt="TimeGom 로고" width="60" height="60"> TimeGom</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">시계</a></li>
