--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>시계 - TimeGom</title>
+    <meta name="description" content="TimeGom - 정확한 현재 시간과 세계 시간을 확인하고 타이머, 스톱워치 기능을 이용할 수 있는 시계 서비스입니다.">
+    <meta name="keywords" content="시계, 세계시간, 타이머, 스톱워치, 알람, 디지털시계, 아날로그시계">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -15,7 +17,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo"><i class="fas fa-clock"></i> TimeGom</h1>
+            <h1 class="logo"><img src="timegom Logo.png" alt="TimeGom 로고" width="60" height="60"> TimeGom</h1>
             <nav>
                 <ul>
                     <li><a href="index.html" class="active"><i class="fas fa-clock"></i> 시계</a></li>
@@ -154,6 +156,13 @@
                     </div>
                 </div>
             </div>
+        </section>
+
+        <section class="clock-info">
+            <h2><i class="fas fa-info-circle"></i> TimeGom 시계 소개</h2>
+            <p>TimeGom은 정확한 시간 정보를 제공하는 온라인 시계 서비스입니다. 디지털 시계와 아날로그 시계 모두 지원하며, 세계 여러 도시의 현재 시간을 한눈에 확인할 수 있습니다.</p>
+            <p>시간대별로 뉴욕, 런던, 파리, 도쿄의 현재 시간을 제공하여 전 세계 친구나 동료와의 원활한 소통에 도움을 드립니다. 또한 타이머와 스톱워치 기능도 함께 이용하실 수 있어 시간 관리에 유용합니다.</p>
+            <p>TimeGom은 직관적인 인터페이스와 깔끔한 디자인으로 사용자 경험을 최우선으로 생각합니다. 언제 어디서나 정확한 시간을 확인하고 관리하세요.</p>
         </section>
 
         <section class="links-section">
