--- a/stopwatch.html
+++ b/stopwatch.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>스톱워치 - TimeGom</title>
+    <meta name="description" content="TimeGom의 정확한 스톱워치로 시간을 측정하고 기록하세요.">
+    <meta name="keywords" content="스톱워치, 타이머, 시간측정, 랩타임, 기록측정">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -11,7 +13,7 @@
 <body>
     <header>
         <div class="container">
-            <h1 class="logo">TimeGom</h1>
+            <h1 class="logo"><img src="timegom Logo.png" alt="TimeGom 로고" width="60" height="60"> TimeGom</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">시계</a></li>
