Update: 새 페이지 추가 및 기존 파일 수정

--- a/timer.html
+++ b/timer.html
@@ -22,6 +22,7 @@
                 <ul>
                     <li><a href="index.html"><i class="fas fa-clock"></i> 시계</a></li>
                     <li><a href="timer.html" class="active"><i class="fas fa-hourglass-half"></i> 타이머</a></li>
+                    <li><a href="pomodoro.html"><i class="fas fa-brain"></i> 집중 타이머</a></li>
                     <li><a href="stopwatch.html"><i class="fas fa-stopwatch"></i> 스톱워치</a></li>
                 </ul>
             </nav>
@@ -95,6 +96,7 @@
 
         <section class="links-section">
             <a href="index.html" class="button primary-button"><i class="fas fa-clock"></i> 시계로 이동</a>
+            <a href="pomodoro.html" class="button primary-button"><i class="fas fa-brain"></i> 집중 타이머 시작하기</a>
             <a href="stopwatch.html" class="button secondary-button"><i class="fas fa-stopwatch"></i> 스톱워치 시작하기</a>
         </section>
     </main>
