Update: 새 페이지 추가 및 기존 파일 수정

--- a/pomodoro.html
+++ b/pomodoro.html
@@ -47,8 +47,8 @@
                         <circle class="progress-ring-circle" cx="150" cy="150" r="140" stroke="var(--primary-color)" stroke-width="8" fill="transparent"></circle>
                     </svg>
                     <div class="timer-content">
-                        <div class="timer-mode" id="timerMode">집중 모드</div>
-                        <div class="timer-countdown pomodoro-display" id="pomodoroTimer">25:00</div>
+                        <div class="timer-set-time"><span id="timerMode">집중 모드</span></div>
+                        <div class="timer-countdown" id="pomodoroTimer">25:00</div>
                         <div class="timer-end-time">종료 <span id="endTime">--:--</span></div>
                     </div>
                     
